<resources>
    <string name="app_name">Odd Jobs</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <!-- Strings for job listings -->
    <string name="create_new_job_button">Create New Job</string>

    <!-- Strings for creating a new job listing -->
    <string name="job_title_label">Title</string>
    <string name="job_title_hint">Enter a title for the job.</string>
    <string name="job_description_label">Description</string>
    <string name="job_description_hint">Enter a description for the job.</string>
    <string name="job_compensation_label">Compensation</string>
    <string name="job_compensation_hint">How much will you pay for this job?</string>
    <string name="job_city_label">Location in Ohio (City)</string>
    <string name="job_city_hint">Which Ohio city is this job in?</string>
    <string name="job_completed_label">Completed</string>
    <string name="job_volunteer_button">Volunteer</string>

    <string name="edit_job_button">Edit Job</string>

    <!-- Toolbar -->
    <string name="new_job">New Job</string>

    <string name="update_job_button">Update Job</string>
    <string name="delete_job_button">Delete Job</string>
    <string name="job_poster_label">Posted by</string>
    <string name="job_volunteer_label">Volunteered for by</string>
    <string name="pay_button">Pay Volunteer</string>


    <string name="last_name_hint">e.g. Smith</string>
    <string name="first_name_hint">e.g. James</string>
    <string name="phone_hint">1-800-555-5555</string>
    <string name="password_hint">Please enter a strong password.</string>
    <string name="confirm_password_hint">Please reenter your password.</string>
    <string name="email_hint">james.smith@gmail.com</string>

    <string name="last_name_label">Last name</string>
    <string name="first_name_label">First name</string>
    <string name="phone_label">Phone number</string>
    <string name="email_label">Email</string>
    <string name="profile">User Profile</string>

    <string name="info_for_volunteer">Thank you for helping out!\nPlease contact the poster to continue:</string>
    <string name="ok_button">OK</string>
    <string name="title_activity_job_map">Map</string>
    <string name="job_map_button">View Job Location</string>
    <string name="edit_profile_button">Edit Profile</string>
    <string name="user_first_name_label">First Name</string>
    <string name="user_last_name_label">Last Name</string>
    <string name="user_phone_number_label">Phone Number</string>
    <string name="user_email_address_label">Email Address</string>
</resources>
