<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_margin="16dp"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <TextView
        style="?android:listSeparatorTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/job_title_label"/>
    <EditText
        android:id="@+id/job_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/job_title_hint"
        android:maxLines="1"
        android:layout_marginBottom="15dp" />

    <TextView
        style="?android:listSeparatorTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/job_compensation_label"/>
    <EditText
        android:id="@+id/job_compensation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/job_compensation_hint"
        android:layout_marginBottom="15dp" />

    <TextView
        style="?android:listSeparatorTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/job_description_label"/>
    <EditText
        android:id="@+id/job_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/job_description_hint"
        android:lines="6"
        android:gravity="top"
        android:layout_marginBottom="15dp" />

    <Button
        android:id="@+id/create_job_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/job_create_button" />
</LinearLayout>