<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1">

    <TextView
        android:text="First Name:"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/firstnameText" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/first_name"
        android:hint="@string/first_name_hint" />

    <TextView
        android:text="Last Name:"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/lastNameText" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/last_name"
        android:hint="@string/last_name_hint" />

    <TextView
        android:text="Phone Number:"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/phoneText" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="phone"
        android:ems="10"
        android:id="@+id/phone"
        android:hint="@string/phone_hint" />

    <TextView
        android:text="Email:"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/emailView" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:id="@+id/email"
        android:hint="@string/email_hint" />

    <TextView
        android:text="Enter Password:"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/enter_password" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/Password"
        android:hint="@string/password_hint" />

    <TextView
        android:text="Confirm Password:"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/confirm_pword" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/confirm_password"
        android:hint="@string/confirm_password_hint" />

    <Button
        android:text="Register User"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/reg_user_button" />
</LinearLayout>